REG-383 No visible control to close the help window in the markdown editor, set close icon to 'fixed'

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
@@ -54,10 +54,11 @@ div.markdown-help-content
     background-color: white
     @include code-style
     >i.fa.fa-times-circle
-      position: absolute
-      top: 5px
-      right: 5px
+      position: fixed
+      top: 55px
+      right: 70px
       font-family: FontAwesome
+
 
 div[data-tribe-markdown]
   display: inline-block
